# ai-employee-scheduling-system

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: DockerFile  main.py  prestart.sh  pyproject.toml
backend/models/: database.py  models.py  schemas.py  seeding.py
backend/routes/: employees.py  locations.py  managers.py  production_lines.py  routers.py  shifts.py  skills.py  time_off_requests.py
backend/src/: reporting.py  schedule.py
