[tool.poetry]
name = "employee-scheduling-system"
version = "0.1.0"
description = "Employee Scheduling System"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
sqlmodel = "^0.0.22"
celery = {extras = ["redis"], version = "^5.4.0"}
uvicorn = "^0.32.1"
pymysql = "^1.1.1"
pydantic = {extras = ["email"], version = "^2.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
ortools = "^9.11.4210"
google-generativeai = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
